--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,8 @@
     "theme_color": "#3f51b5",
     "icons": [
       {
-        "src": "/images/icons/android-chrome-192x192.png",
+        "src": "/images/logo.png",
         "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/images/icons/android-chrome-512x512.png",
-        "sizes": "512x512",
         "type": "image/png"
       }
     ]
