--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "theme_color": "#3f51b5",
     "icons": [
       {
-        "src": "/images/logo.png",
+        "src": "images/logo.png",
         "sizes": "192x192",
         "type": "image/png"
       }
